src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__config_lifecycle_1_get.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 632
expression: normalized
---
{
  "ok": true,
  "result": {
    "config": "<CONFIG_DATA>",
    "exists": "<CONFIG_EXISTS>",
    "hash": "<CONFIG_HASH>",
    "issues": "<CONFIG_ISSUES>",
    "parsed": "<CONFIG_PARSED>",
    "path": "<PATH>",
    "raw": "<CONFIG_RAW>",
    "valid": "<CONFIG_VALID>",
    "warnings": []
  }
}
