src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__config_lifecycle_2_get_key.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 643
expression: normalized
---
{
  "ok": true,
  "result": {
    "key": "gateway.port",
    "value": "<CONFIG_VALUE>"
  }
}
