src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__cron_lifecycle_2_add.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 542
expression: normalized
---
{
  "ok": true,
  "result": {
    "job": {
      "createdAtMs": "<TIMESTAMP>",
      "enabled": true,
      "id": "<UUID>",
      "name": "golden-test-job",
      "payload": {
        "kind": "systemEvent",
        "text": "test golden"
      },
      "schedule": {
        "expr": "*/5 * * * *",
        "kind": "cron"
      },
      "sessionTarget": "main",
      "state": {
        "nextRunAtMs": "<TIMESTAMP>"
      },
      "updatedAtMs": "<TIMESTAMP>",
      "wakeMode": "now"
    },
    "ok": true
  }
}
