src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__golden_agents_list.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 383
expression: normalized
---
{
  "ok": true,
  "result": {
    "agents": [
      {
        "default": true,
        "description": "Default assistant",
        "enabled": true,
        "id": "default",
        "identity": {
          "name": "Carapace"
        },
        "name": "Carapace"
      }
    ],
    "count": 1,
    "defaultId": "default",
    "mainKey": "main",
    "scope": "per-sender"
  }
}
